# dotenv-aggregator

./: .gitignore  Cargo.toml  readme.md  test
src/: main.rs
src/env_text/: mod.rs  path_args.rs
src/lib/: env_text.rs  error.rs  mod.rs
