[package]
name = "dotenv-aggregator"
version = "0.0.1-alpha"
authors = ["R.bertKo <myeongsku@gmail.com>"]
description = "dotenv-aggregtor is a tool to make dotenv easier to migrate."
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
